# SharedMemoryTest

./: CMakeLists.txt  LogDll.cpp  LogDll.h  LogReader.cpp  LogWriter.cpp  README.md
